browser/pong.css
@import "http://fonts.googleapis.com/css?family=Geo:regular";
*{
	margin: 0;
	padding:0;
}
body {
  font-family: Geo, serif;
  font-size: 12pt;
  margin: 0 4em;
  padding: 0;
  background: black;
  color: white;
}
#scoreboards_player_one, #scoreboards_player_two {
  border: medium solid;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  height: 2em;
  font-size: 2em;
  width: 4em;
  line-height: 2em;
  border-radius: 0.5em;
  text-align: center;
}
#scoreboards_player_one {
  position: absolute;
  top: 0.5em;
  left: 2em;
}
#scoreboards_player_two {
  position: absolute;
  top: 0.4em;
  right: 2em;
}
h1 {
  margin: 0.5em 4.5em 0;
  height: 2em;
  font-size: 2em;
  line-height: 2em;
  text-align: center;
}
#playarea {
  font-size: inherit;
  border-top: 1em solid;
  border-bottom: 1em solid;
  margin: 3em 0;
  box-sizing: content-box;
  width: 100%;
  height: 60%;
}
#players_name_one {
  position: absolute;
  top: 2.5em;
  left: 2em;
  font-size: 2em;
  height: 2em;
}
#players_name_two {
  position: absolute;
  top: 2.5em;
  right: 2em;
  font-size: 2em;
  height: 2em;
}
div#message_box, .dialogue{
	position: absolute;
	border: medium solid;
	padding: 2em;
	border-radius: 1em;
	box-sizing: border-box;
}
.dialogue{
	background: rgba(0,0,0,0.8);
	top: 35%;
	left: 15%;
	width: 70%;
	min-width: 40em;
}
.dialogue h2, .dialogue p, div#message_box {
  text-align: center;
  margin: 0;
}
.dialogue table {
  margin: 0 auto;
}
input[type=text] {
  border: medium solid;
  color: inherit;
  background: inherit;
  padding: 0.5em;
  font: inherit;
}
button{
  border: medium solid;
  border-radius: 0.5em;
  font: inherit;
  color: inherit;
  background: inherit;
  font-size: 2em;
  font-weight: bold;
  padding: 0 1em;
}
button {
  position: relative;
  top: 0.1em;
  left: 0.1em;
}
div#message_box{
	background: rgba(0,0,0,0.9);
	display: none;
	top: 0em;
	left: 0em;
	width: 40%;
	height: 25%;
	color: white;
}
h1#message_box_title{
	margin: 0;
	padding:0;
}
p#message_box_message{
	margin-top: 1em;
	margin-bottom: 1em;
}

